--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -1,14 +1,14 @@
 spring:
     datasource:
-        url: jdbc:mysql://192.168.100.22:3306/authentication
-        username: dev
-        password: Casa123++
+        url: jdbc:mysql://findl.dynu.net:3306/dac6_meryeme
+        username: dac6.api
+        password: 4{UWzFX7r5!f<YSG
     jpa:
         show-sql: true
         properties:
             hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
         hibernate:
-            ddl-auto: create
+            ddl-auto: validate
             naming.physical-strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 
 auth:
