--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
     "jwt-decode": "^2.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "qrcode-generator": "1.4.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.4",
