--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
         properties:
             hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
         hibernate:
-            ddl-auto: create
+            ddl-auto: validate
             naming.physical-strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 
 jwt:
