--- a/client/package.json
+++ b/client/package.json
@@ -21,10 +21,11 @@
     "@angular/router": "~8.2.5",
     "bootstrap": "^4.4.1",
     "jwt-decode": "^2.2.0",
+    "ngx-mask": "^9.1.2",
+    "qrcode-generator": "1.4.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1",
-    "qrcode-generator": "1.4.4"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.4",
